# LMS_FIR_IMU_ROS

./: CMakeLists.txt  LICENSE.txt  README.md  package.xml
config/: params.yaml
include/: fir_lms_imu.h
launch/: fir_lms_imu_node.launch
src/: fir_lms_imu_node.cpp  goc.cpp
